@@ -1,3 +1,8 @@
+02/09/2006  Ian Lewis   <IanLewis@member.fsf.org>
+
+    * Fixed bug where adding a DTD node was shown as an option for element
+      nodes.
+
 02/02/2006  Ian Lewis   <IanLewis@member.fsf.org>
 
     * Added localized messages to the view. jsXe now supports views having their
